--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="../js/pages/view/dashboard/DaysTimeView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/QuestView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/QuestListView.js"></script>
+    <script type="text/javascript" src="../js/pages/view/dashboard/QuestPageView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/MemoView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessListView.js"></script>
     <script type="text/javascript" src="../js/pages/view/dashboard/TirednessView.js"></script>
