--- a/src/html/gif-capture.html
+++ b/src/html/gif-capture.html
@@ -7,7 +7,7 @@
       <script type="text/javascript" src="../js/jsgif/LZWEncoder.js"></script>
       <script type="text/javascript" src="../js/jsgif/NeuQuant.js"></script>
       <script type="text/javascript" src="../js/jsgif/GIFEncoder.js"></script>
-      <script type="text/javascript" src="../js/jsgif/b64.js"></script>
+      <!-- script type="text/javascript" src="../js/jsgif/b64.js"></script -->
       <script type="text/javascript" src="../js/jquery.min.js"></script>
       <script type="text/javascript" src="../js/materialize.min.js"></script>
       <script type="text/javascript" src="../js/angular.min.js"></script>
