--- a/src/html/gif-capture.html
+++ b/src/html/gif-capture.html
@@ -92,7 +92,10 @@
             </div>
             <div class="row" data-ng-if="duration.end.idx - duration.start.idx > 0">
               <div class="col s12">
-              <span class="btn waves-effect waves-light blue" style="width:100%" data-ng-click="generate()">Generate GIF</span>
+                <span class="btn waves-effect waves-light blue" style="width:100%" data-ng-click="generate()">Generate GIF</span>
+                <div class="progress">
+                  <div class="determinate" style="width: {{progress.percent}}%"></div>
+                </div>
               </div>
             </div>
           </div>
