Fix drop frame css

--- a/src/html/gif-capture.html
+++ b/src/html/gif-capture.html
@@ -28,7 +28,7 @@
           position: relative;
         }
         .frame-dur-container:after {
-          content: "drop image here";
+          content: "drop frame here";
           font-size: 2em;
           color: #dadada;
           font-weight: bold;
