Allow ships status window always on top

--- a/src/html/ships_status.html
+++ b/src/html/ships_status.html
@@ -12,7 +12,8 @@
             overflow: hidden;
             cursor: pointer;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: contain;
+            background-color: #d0d0d0;
         }
         img.contain-page {
             max-width: 100%;
