--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -2,6 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <style>
+  html {
+    min-width: 200px;
+    min-height: 400px;
+  }
+  </style>
 </head>
 <body>
   <div id="main"></div>
