--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html style="min-width: 200px; min-height: 400px;">
 <head>
   <meta charset="utf-8">
-  <style>
-  html {
-    min-width: 200px;
-    min-height: 400px;
-  }
-  </style>
 </head>
 <body>
   <div id="main"></div>
