クロックモードつくった

--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="min-width: 200px; min-height: 400px;">
+<html style="width: 272px; min-height: 280px;">
 <head>
   <meta charset="utf-8">
 </head>
