通知の詳細設定できるようにした（設定のみ）

--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -2,6 +2,7 @@
 <html style="min-width: 200px; min-height: 400px;">
 <head>
   <meta charset="utf-8">
+  <title>艦これウィジェットの設定</title>
   <style>
     #main {
       width: 80%;
