複数PC間同期の設定項目とやってみるボタンを設置した

--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -9,6 +9,12 @@
       min-width: 640px;
       margin: 0 auto;
     }
+    a, a:visited {
+      color: #39c;
+    }
+    a:hover {
+      color: #39f;
+    }
   </style>
 </head>
 <body>
