クロックモードからの各種タイマーのマニュアル設定
（多分動くと思うからリリースしちゃおうぜ）
Fix #654

--- a/dest/html/dashboard.html
+++ b/dest/html/dashboard.html
@@ -10,6 +10,9 @@
       background-color: #fafafa;
       min-width: 400px;
     }
+    input[type=number]:focus {
+      outline: none;
+    }
   </style>
 </head>
 <body style="margin:0">
