--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 </head>
-<body>
+<body style="padding-bottom: 32px;">
   <div id="main"></div>
   <script type="text/javascript" src="../js/popup.js"></script>
 </body>
