右上ポップアップの設定を追加

--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -4,6 +4,17 @@
   <meta charset="utf-8">
   <title>艦これウィジェットの設定</title>
   <style>
+    html {
+      background-position: right bottom;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: contain;
+    }
+    body {
+      background-color: rgba(255,255,255,0.8);
+      margin: 0;
+      padding-bottom: 60px;
+    }
     #main {
       width: 80%;
       min-width: 640px;
