--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
-<html style="width: 272px; min-height: 280px;">
+<html>
 <head>
+  <style>
+    html {
+      width: 280px;
+      min-height: 300px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+    body {
+      min-height: 300px;
+      margin: 0;
+      padding: 8px 8px 48px 8px;
+      background-color: rgba(255, 255, 255, 0.7);
+    }
+  </style>
   <meta charset="utf-8">
 </head>
 <body style="padding-bottom: 32px;">
