運営電文を表示していないときに背景カスタマイズがさみしいので、画像の右下を優先的に表示するようにした

--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -8,6 +8,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
+      background-position: right bottom;
     }
     body {
       min-height: 300px;
