--- a/dest/html/dashboard.html
+++ b/dest/html/dashboard.html
@@ -13,6 +13,20 @@
     input[type=number]:focus {
       outline: none;
     }
+    @-webkit-keyframes SHAKE {
+      5%, 95% {
+        transform: translate3d(-1px, 0, 0);
+      }
+      10%, 90% {
+        transform: translate3d(1px, 0, 0);
+      }
+      15%, 25%, 35%, 45%, 55%, 65%, 75%, 85% {
+        transform: translate3d(-2px, 0, 0);
+      }
+      40%, 60% {
+        transform: translate3d(2px, 0, 0);
+      }
+    }
   </style>
 </head>
 <body style="margin:0">
