--- a/dest/html/dsnapshot.html
+++ b/dest/html/dsnapshot.html
@@ -7,6 +7,10 @@
     html, body {
       padding: 0;
       margin:  0;
+      height: 100%;
+      width: 100%;
+      background-image: url('/dest/img/dsnapshot-bg.png');
+      background-size: contain;
     }
     div#damagesnapshot {
       height: 100%;
