--- a/dest/html/stream.html
+++ b/dest/html/stream.html
@@ -2,7 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>動画キャプチャ</title>
+  <style>
+  html, body, main {
+    margin:                 0;
+    padding:                0;
+    width:               100%;
+    height:              100%;
+    background-color: #2b2c34;
+    color:            #b0baca;
+  }
+  </style>
 </head>
 <body>
   <div id="main" class="container"></div>
