--- a/dest/html/stream.html
+++ b/dest/html/stream.html
@@ -5,12 +5,16 @@
   <title>動画キャプチャ</title>
   <style>
   html, body, main {
-    margin:                 0;
-    padding:                0;
-    width:               100%;
-    height:              100%;
-    background-color: #2b2c34;
-    color:            #b0baca;
+    margin:                  0;
+    padding:                 0;
+    width:                100%;
+    height:               100%;
+    background-color:  #2b2c34;
+    color:             #b0baca;
+  }
+  td {
+    color:             #b0baca;
+    font-size:           1.2em;
   }
   </style>
 </head>
