FEATURE: スクラップブックという機能の名前を「アーカイブ」に変更

--- a/dest/html/archive.html
+++ b/dest/html/archive.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>スクラップブック</title>
+  <title>アーカイブ</title>
   <style>
     /*#main {
       width: 80%;
@@ -19,6 +19,6 @@
 </head>
 <body>
   <div id="main" class="container"></div>
-  <script type="text/javascript" src="../js/scrapbook.js"></script>
+  <script type="text/javascript" src="../js/archive.js"></script>
 </body>
 </html>
