アレのアクセシビリティをちょっとアレした

--- a/gh-pages/aprilfools/index.html
+++ b/gh-pages/aprilfools/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.0/css/bulma.min.css" />
   <link rel="stylesheet" type="text/css" href="./index.css" />
+  <link rel="shorcut icon" href="../../dest/img/icons/chang.38.png" />
+  <title>艦これウィジェット、春のBANまつり！</title>
 </head>
 <body>
   <section class="hero">
