--- a/dest/oauth/chrome_ex_oauth.html
+++ b/dest/oauth/chrome_ex_oauth.html
@@ -15,13 +15,13 @@
         color: #333;
       }
     </style>
-    <script type="text/javascript" src="dest/oauth/chrome_ex_oauthsimple.js"></script>
-    <script type="text/javascript" src="dest/oauth/chrome_ex_oauth.js"></script>
-    <script type="text/javascript" src="dest/oauth/onload.js"></script>
+    <script type="text/javascript" src="./chrome_ex_oauthsimple.js"></script>
+    <script type="text/javascript" src="./chrome_ex_oauth.js"></script>
+    <script type="text/javascript" src="./onload.js"></script>
   </head>
   <body>
     <h1>Twitterのページにリダイレクトしています</h1>
-    <img src="dest/img/icons/chang.128.png">
+    <img src="../img/icons/chang.128.png">
     <p>問題が発生した場合は @KanColleWidget まで</p>
   </body>
 </html>
