Specify language with `<meta>`

--- a/dest/html/wiki.html
+++ b/dest/html/wiki.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="content-language" content="ja">
   <title>Wikiに感謝</title>
   <style>
     html, body {
