--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf8" />
     <link rel="stylesheet" href="../css/index.css" />
+    <script src="../js/popup.js" defer></script>
   </head>
   <body>
-    <div class="container">
-      <h1>KanColleWidget</h1>
-    </div>
+    <main id="app"></main>
   </body>
 </html>
