CSSのビルドをリファクタリングした

--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/options.css" />
+    <script src="/dest/js/options.js" defer></script>
   </head>
   <body>
-    <main id="app"><h1>ほげ</h1></main>
+    <main id="app"></main>
   </body>
 </html>
