--- a/dest/html/popup.html
+++ b/dest/html/popup.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf8" />
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/popup.css" />
     <script src="../js/popup.js" defer></script>
   </head>
   <body>
