なんか原因わからないエラーが有るのでLocalStorageインスペクターをつくった

--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <main id="app"></main>
+    <div class="container options">
+      <p>
+        <button class="btn btn-primary" id="btn-localstorage-inspector">
+          <img src="/dest/img/exit.svg" width="22px" style="vertical-align: bottom;" /> LocalStorage Inspector
+        </button>
+      </p>
+      <div id="localstorage-inspector-container" style="display: none;">
+        <pre id="localstorage-inspector"></pre>
+      </div>
+    </div>
   </body>
 </html>
