--- a/dest/html/dashboard.html
+++ b/dest/html/dashboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ダッシュボード</title>
+    <title>おつかれさまです。</title>
     <meta charset="utf8" />
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/dashboard.css" />
@@ -9,6 +9,5 @@
   </head>
   <body>
     <main id="app"></main>
-    <h1>ダッシュボード！</h1>
   </body>
 </html>
