--- a/dest/html/options.html
+++ b/dest/html/options.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>設定</title>
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/options.css" />
     <script src="/dest/js/options.js" defer></script>
